--- a/work.html
+++ b/work.html
@@ -41,13 +41,13 @@
 <h2>JS</h2>
 <section class="js-app">
 <h3>Think.js</h3>
-<p>JS ML and Shape recognition library</p>
+<p class="desc">JS ML and Shape recognition library</p>
 <a class="tar" target="_blank" href="https://github.com/filipvabrousek/Algorithms/blob/master/Think/Think.md">API</a>
 </section>
     
 <section class="js-app">
 <h3>Create you own React</h3>
-<p>Udemy course</p>
+<p class="desc">Udemy course</p>
 <a class="tar" target="_blank" href="https://github.com/filipvabrousek/Algorithms/blob/master/Think/Think.md">More</a>
 </section>
     
