--- a/work.html
+++ b/work.html
@@ -10,7 +10,8 @@
 <img class="app-img" src="images/relayworld.png">
 <h3>Relays</h3>
 <p class="desc">World's first sports app written in SwiftUI</p>
-<!---<img class="appstore" src = "images/download.png">-->
+
+<img class="appstore" src = "images/download.png">
 </section> 
     
 <section class="app">
