--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
 
         .about {
             margin-top: 1em;
-            margin-left: 0.3em;
+            margin-left: 0.5em;
             margin-bottom: 0.3em;
         }
         
@@ -933,20 +933,20 @@ footer {
 
                 S("#left").style.display = "none";
                 S("#navback").style.display = "none";
-                S("#hide").innerHTML = "&#9776;";
+                S("#h").innerHTML = "&#9776;";
                 /* S("#hide").style.position = "absolute";
                  S("#hide").marginTop = "20px";*/
-                S(".block").style.display = "block";
-                S(".block-img").style.display = "block";
+               // S(".block").style.display = "block";
+               // S(".block-img").style.display = "block";
 
             } else {
                 /* S("#hide").style.position = "absolute";*/
                 /*S("#hide").marginTop = "3em";*/
                 S("#left").style.display = "block";
                 S("#navback").style.display = "block";
-                S("#hide").innerHTML = "&#10006;";
-                S(".block").style.display = "none";
-                S(".block-img").style.display = "none";
+                S("#h").innerHTML = "&#10006;";
+               // S(".block").style.display = "none";
+               // S(".block-img").style.display = "none";
             }
         });
 
@@ -966,17 +966,16 @@ footer {
                 S("#navback").style.display = "none";
                 S(".block").style.display = "block";
                 S(".block-img").style.display = "block";
-                S("#hide").innerHTML = "&#9776;";
-                S("#hide").marginTop = "20px"; // do not set position to absolute
+                S("#h").innerHTML = "&#9776;";
+                S("#h").marginTop = "20px"; // do not set position to absolute
             } else {
                S("#left").style.display = "flex"; 
-                
                 S("#navback").style.display = "block";
-                S("#hide").innerHTML = "&#10006;";
+                S("#h").innerHTML = "&#10006;";
                 S(".block").style.display = "none";
                 S(".block-img").style.display = "none";
-                S("#hide").marginTop = "3em";
-                S("#hide").marginRight = "2em";
+                S("#h").marginTop = "3em";
+                S("#h").marginRight = "2em";
 
             }
         });
