--- a/graphics.html
+++ b/graphics.html
@@ -257,10 +257,9 @@
 }
 
 .about {
+    text-align: center;
 	color: black;
 }
-
-
         .about {
             margin-top: 1em;
             margin-left: 0.3em;
