--- a/graphics.html
+++ b/graphics.html
@@ -213,6 +213,10 @@
                 background: orange;
                 font-size: 4em;
             }
+            
+            .tut {
+                font-size: 5em;
+            }
         }
     </style>
     
