--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
 <section class="js-app">
 <h3>swimrunworld.co</h3>
 <p class="desc">Web version of Swimrun World</p>
-<a class="tar" target="_blank" href="http://www.petrvabrousek.cz/">More</a>
+<a class="tar" target="_blank" href="http://swimrunworld.co/">More</a>
 </section>
 
     
