--- a/work.html
+++ b/work.html
@@ -27,7 +27,8 @@
 <img class="app-img" src="images/relayworld.png">
 <h3 class="app-title">Relays</h3>
 <p class="desc">World's first sports app written in SwiftUI</p>
-<img class="appstore relays" src = "images/download.png">
+<!---<img class="appstore relays" src = "images/download.png">--->
+    <a href="https://apps.apple.com/us/app/relays-find-a-relay-partner/id1483402813"><img class="appstore" src="images/download.png"/></a>
 </section> 
     
 <section class="app">
