--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <button class="btn-nav" id="close">×</button>
                 <a class="btn-nav" href="index.html">Home</a>
                 <a class="btn-nav" href="work.html">Work</a>
-                <a class="btn-nav" href="graphics.html">Graphic</a>
+                <a class="btn-nav" href="graphics.html">Design</a>
                 <a class="btn-nav" href="about.html">About</a>
             </div>
 
