--- a/AE-Advanced.html
+++ b/AE-Advanced.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <title>Hey there</title>
+    <title>Advanced After Effects</title>
     <meta name="referrer" content="no-referrer" />
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Anaheim&display=swap" rel="stylesheet">
