--- a/AE-Advanced.html
+++ b/AE-Advanced.html
@@ -132,7 +132,7 @@
         </ul>
       <li> 1/1/2018</li>
 
-      <img class="tut-image" src="images/shield.png">
+      <img class="tut-image bottom" src="images/shield.png">
     
 <style>
 
