--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 1em;
+        margin-bottom: 4em;
     }
     
     .about {
