--- a/graphics.html
+++ b/graphics.html
@@ -53,7 +53,7 @@
         <a class="tar" href="PR-Advanced.html">Tips</a>
     
         <h3 class="tut ps">Photoshop</h3>
-        <a class="tar" href="https://filipvabrousek.weebly.com/ad-ps-exposure.html">More</a>
+        <a class="tar" href="PS-Advanced.html">More</a>
     
         <h3 class="tut ai">Illustrator</h3>
         <a class="tar" href="https://filipvabrousek.weebly.com/ad-illustrator.html">Tips</a>
