--- a/about.html
+++ b/about.html
@@ -175,12 +175,9 @@
         </div>
 
     </footer>
-   
-    
   
   <link rel="stylesheet" href="common.css">  
-
-
+ <link rel="stylesheet" href="dark.css">
 
 
 
