--- a/work.html
+++ b/work.html
@@ -112,7 +112,7 @@
     
 <h3 class="app-title app-title-web fade hidden">Create your own React</h3>
 <p class="desc fade hidden">Udemy course</p>
-<a class="tar tar-small bottom-btn fade hidden" target="_blank" href="https://www.udemy.com/course/create-your-own-react/">More</a>
+<a class="tar tar-small fade hidden" target="_blank" href="https://www.udemy.com/course/create-your-own-react/">More</a>
     
 <h3 class="app-title app-title-web fade hidden">CSS Tutorials</h3>
 <p class="desc fade hidden">Code tutorials [GitHub]</p>
