--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="btn-nav" id="close">×</button>
                 <a class="btn-nav" href="index.html">Home</a>
                 <a class="btn-nav" href="work.html">Work</a>
-                <a class="btn-nav" href="graphics.html">Design</a>
+                <a class="btn-nav" href="design.html">Design</a>
                 <a class="btn-nav" href="about.html">About</a>
             </div>
 
