--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <h1 class="about">Filip Vabrousek</h1>
         
     <!--- 1/9/2015 - 7:48 --->
-        <p class="pad">Hi, I am Swift and JavaScript developer. My coding journey has begun on September 1st 2015, when I began my journey as a JS programmer. In July 2016, I also started to learn Swift and since the I stopped for nothing. On 12th December 2018, my first app - Swimrun World has been accepted on the AppStore, and the experience has encouraged me to keep coding. In 2019 I released Runny, running app to help with the effectivity of your run, followed by RelayWorld, world's first sports app written in SwiftUI. Aside from coding I am an avid runner, climber, and from time to time, I fire up After Effects and try some motion design.</p>
+        <p class="pad">Hi, I am Swift and JavaScript developer. My coding journey has begun on September 1st 2015, when I began my journey as a JS programmer. In July 2016, I also started to learn Swift and since the I stopped for nothing. On 12th December 2018, my first app - Swimrun World has been accepted on the AppStore, and the experience has encouraged me to keep coding. In 2019 I released Runny, running app to help with the effectivity of your run, followed by Relays, world's first sports app written in SwiftUI. Aside from coding I am an avid runner, climber, and from time to time, I fire up After Effects and try some motion design.</p>
    
         <section id="images">
             <img src="images/nymburk-2019.jpg">
