--- a/index.html
+++ b/index.html
@@ -193,11 +193,12 @@
 
                 S("#left").style.display = "none";
                 S("#navback").style.display = "none";
-                S("#hide").innerHTML = "&#9776;";
+                S("#h").innerHTML = "&#9776;";
                 /* S("#hide").style.position = "absolute";
-                 S("#hide").marginTop = "20px";*/
+                 S("#hide").marginTop = "20px";
                 S(".block").style.display = "block";
                 S(".block-img").style.display = "block";
+                */
 
             } else {
                 /* S("#hide").style.position = "absolute";*/
@@ -205,8 +206,8 @@
                 S("#left").style.display = "block";
                 S("#navback").style.display = "block";
                 S("#hide").innerHTML = "&#10006;";
-                S(".block").style.display = "none";
-                S(".block-img").style.display = "none";
+              /*  S(".block").style.display = "none";
+                S(".block-img").style.display = "none";*/
             }
         });
 
