--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 /*S("#hide").marginTop = "3em";*/
                 S("#left").style.display = "block";
                 S("#navback").style.display = "block";
-                S("#hide").innerHTML = "&#10006;";
+                S("#h").innerHTML = "&#10006;";
               /*  S(".block").style.display = "none";
                 S(".block-img").style.display = "none";*/
             }
