--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 
             <div id="left">
                 <button class="btn-nav" id="close">×</button>
-                <a class="btn-nav" href="index.html">Home</a>
-                <a class="btn-nav" href="work.html">Work</a>
+              <!--  <a class="btn-nav" href="index.html">Home</a>-->
+                <a class="btn-nav" href="index.html">Work</a>
                 <a class="btn-nav" href="design.html">Design</a>
                 <a class="btn-nav" href="about.html">About</a>
             </div>
