--- a/about.html
+++ b/about.html
@@ -179,6 +179,7 @@
     </footer>
   
   <link rel="stylesheet" href="common.css">  
+    <link rel="stylesheet" href="anim.css">
 <!---<link rel="stylesheet" href="dark.css">-->
 
 
