--- a/index.html
+++ b/index.html
@@ -391,7 +391,12 @@
     
 
 </style>
-    <link rel="stylesheet" href="anim.css">
+  <!--<link rel="stylesheet" href="anim.css">-->
+ <style>
+        .hidden {
+            display: block;
+        }
+    </style>
 
 <!--
     <section class="block">
