--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
 <h3 class="app-title hidden">Relays</h3>
 <p class="desc hidden">World's first sports app written in SwiftUI</p>
 
-    <a class="hidden" href="https://apps.apple.com/cz/app/relays-find-a-relay-partner/id1483402813"><img class="appstore hidden" src="images/download.png"/></a>
+  <!---  <a class="hidden" href="https://apps.apple.com/cz/app/relays-find-a-relay-partner/id1483402813"><img class="appstore hidden" src="images/download.png"/></a>-->
+     <a class="hidden" href="https://itunes.apple.com/us/app/relays-find-a-relay-partner/id1483402813"><img class="appstore hidden" src="images/download.png"/></a>
+    
+
 </section> 
     
 <section class="app">
