--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
         font-size: 3em;
     }
    
+            .app a {
+                padding-top: 1em;
+            }
         }
         
         
