--- a/design.html
+++ b/design.html
@@ -55,6 +55,7 @@
         <h3 class="tut ae">After Effects</h3>
         <a class="tar tar-small" href="AE-Intention.html">Intention</a>
         <a class="tar tar-small" href="AE-True-detective.html">Exposure</a>
+        <a class="tar tar-small" href="AE-WaterColor.html">WaterColor</a>
         <a class="tar tar-small" href="AE-Advanced.html">Advanced</a>
         <a class="tar tar-small" href="AE-Glitch.html">Glitch</a>
       
