--- a/AE-WaterColor.html
+++ b/AE-WaterColor.html
@@ -38,7 +38,7 @@
 <ul>
    
 <li>1) import footage</li>
-    <li>2) change mode of Footage Luma stain</li>
+    <li>2) change mode of Footage to Luma stain</li>
     <li>3) Animate its offset and scale as the video progresses</li>
  </ul>      
     
