--- a/PS-Advanced.html
+++ b/PS-Advanced.html
@@ -10,6 +10,16 @@
     <link href="https://fonts.googleapis.com/css?family=Anaheim&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143592417-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143592417-3');
+</script>
+
 </head>
 
 
@@ -22,9 +32,8 @@
 
             <div id="left">
                 <button class="btn-nav" id="close">×</button>
-                <a class="btn-nav" href="index.html">Home</a>
-                <a class="btn-nav" href="work.html">Work</a>
-                <a class="btn-nav" href="graphics.html">Design</a>
+                <a class="btn-nav" href="index.html">Work</a>
+                <a class="btn-nav" href="design.html">Design</a>
                 <a class="btn-nav" href="about.html">About</a>
             </div>
 
