--- a/design.html
+++ b/design.html
@@ -77,8 +77,7 @@
         <a class="tar tar-small" href="PS-Advanced.html">More</a>
     
         <h3 class="tut ai">Illustrator</h3>
-        <a class="tar tar-small" href="https://filipvabrousek.weebly.com/ad-illustrator.html">Tips</a>
-        <a class="tar tar-small" href="https://filipvabrousek.weebly.com/ad-ai-swirl.html">Swirl</a>
+        <a class="tar tar-small" href="AI-Tips.html">Tips</a>
     <footer>
 
 
