--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
         <p class="footer-em">2019</p>
 
         <div id="social">
-            <img id="fba" src="footer/fb.png">
-            <img src="footer/spacer.png">
-            <img id="insta" src="footer/insta.png">
+            <img id="fba" src="tutorials/footer/fb.png">
+            <img src="tutorials/footer/spacer.png">
+            <img id="insta" src="tutorials/footer/insta.png">
         </div>
 
 
