--- a/tutorials/swiftui-widgets-advanced-timelines.html
+++ b/tutorials/swiftui-widgets-advanced-timelines.html
@@ -98,8 +98,8 @@
 	</p>
 	
 	
-	<img class="eighty" src="tut-images/config1.PNG">
-	<img class="eighty" src="tut-images/config2.PNG">
+	<img class="eighty" src="tut-images/config1.png">
+	<img class="eighty" src="tut-images/config2.png">
 
 	<h2>Placeholder View</h2>
 	
