--- a/tutorials/swiftui-widgets-advanced-timelines.html
+++ b/tutorials/swiftui-widgets-advanced-timelines.html
@@ -206,11 +206,11 @@
 		font-family: Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;
     }
     
-    @media (max-device-width: 400px) {
+   /* @media (max-device-width: 400px) {
         code {
             font-size: 1.21em;
         }
-    }
+    }*/
 	
 	
 	
@@ -224,7 +224,7 @@
     }
 
     .sub-image {
-            width: 40vw;
+        width: 40vw;
         border-radius: 1em;
            
     }
@@ -255,7 +255,7 @@
 	
     }
 	
-	@media only screen and (max-device-width: 415px){
+	/*@media only screen and (max-device-width: 415px){
 		.language-js {
 			font-size: 1em;
 		}
