--- a/sport.html
+++ b/sport.html
@@ -73,7 +73,7 @@
 		
 		<div class="pb">
 		  <p class="dist">5K</p>
-		  <p class="time">15:40</p>
+		  <p class="time">15:38</p>
 		</div>
 		<div class="pb">
 		  <p class="dist">10K</p>
@@ -319,6 +319,7 @@
 			border: 4px solid #3498Db;
 			width: 6em;
 			margin-bottom: 1em;
+            border-radius: 0.5em;
 			
 			
 		}
