--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <img class="app-img hidden clear" src="images/eveny-orig.png">
 <h3 class="app-title hidden">Eveny</h3>
 <p class="desc hidden">Stay on the top of your schedule!</p>
+<p class="desc hidden">Featured on the <a class="hidden" target="blank" href="https://apps.apple.com/story/id1531962992">AppStore</a> in "Widgets get an upgrade" story</p>
 <a class="hidden" href="https://apps.apple.com/cz/app/eveny/id1492648115">
     
     <img class="appstore hidden" src="images/download.png"/></a>
