--- a/design.html
+++ b/design.html
@@ -79,8 +79,7 @@
 	
        <!-- <h3 class="design-center fade hidden">watchOS 8</h3>-->
         <img class="design fade hidden" src="images/watchOS-8.png">
-	
-	
+        <video class="design fade hidden" src="images/watchOS-8-animation.mp4" autoplay muted loop controls></video>
 	
 	
 	  <h2 class="toCenter hidden">VIDEO</h2>
