--- a/sport.html
+++ b/sport.html
@@ -60,7 +60,6 @@
 
 	
 	
-	
 	<!-----<h2 class="fade hidden centerText">Personal bests</h2>---->
 	
 	
@@ -71,9 +70,25 @@
 		  <p class="time">2:03</p>
 		</div>
 		
+
+        <div class="pb">
+            <p class="dist">1K</p>
+            <p class="time">2:38</p>
+          </div>
+
+        <div class="pb">
+            <p class="dist">3K</p>
+            <p class="time">8:55</p>
+          </div>
+</section>
+
+
+
+<section class="pb fade hidden sides">
+
 		<div class="pb">
 		  <p class="dist">5K</p>
-		  <p class="time">15:38</p>
+		  <p class="time">15:26</p>
 		</div>
 		<div class="pb">
 		  <p class="dist">10K</p>
@@ -92,7 +107,8 @@
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2018 (Juniors)</li>
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2019 (Men)</li>
 	 <li><b>2nd</b> place Czech Republic 10000m Championships 2018 (Juniors) </li>
-	 <li><b>1st</b> place World Marathon Challenge 2019 (halfmarathons) </li>
+     <li><b>2nd</b> place Czech Republic 10000m Academic Championships 2020 </li>
+	 <li><b>1st</b> place World Marathon Challenge 2019 (7 halfmarathons in 7 days on 7 continents) </li>
 	 <li><b>1st</b> place Běhej Lesy Lednice and Bílá 2018 </li>
 	 <li><b>1st</b> place Běhej Lesy Lednice and Karlštejn 2019 </li>
 	 <li><b>1st</b> place Swimrun Slapy </li>
@@ -307,20 +323,22 @@
 		
 		
 		.sides {
-			display: grid;
+            display: flex;
+            justify-content: center;
+			/*display: grid;
 			grid-template-columns: 1fr 1fr 1fr 1fr;
-			justify-items: center;  
+			justify-items: center; */ 
 			
 			
 		}
 		
 		.sides div {
 			
-			border: 4px solid #3498Db;
+			/*border: 4px solid #3498Db;*/
 			width: 6em;
 			margin-bottom: 1em;
             border-radius: 0.5em;
-			
+			margin: 1em;
 			
 		}
 		
