--- a/design.html
+++ b/design.html
@@ -64,6 +64,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
+            flex-direction: column;
           
         }
         
