--- a/sport.html
+++ b/sport.html
@@ -5,6 +5,7 @@
 
 <head>
     <title>About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer" />
     <meta charset="UTF-8">
      <link rel="stylesheet" href="style/common.css">  
