--- a/index.html
+++ b/index.html
@@ -411,13 +411,14 @@ flex-direction: row;
 <!---------------------watchOS 10------------------>
 
 
-<h2 class="graphicTitle hidden">iPhone 14 Pro concept</h2>
+<h2 class="graphicTitle hidden">iPhone 15 Pro concept</h2>
 
 <div class="adobeRow hidden">
  <img class="adobeIcon hidden" src="images/c4d-icon.png"/>
 </div>
 <div class="sidesImages hidden">
-    <img class="smallCorner" src="images/C4D/render-1.png"/>
+    <img class="smallCorner pad" src="images/C4D/render-august-1.png"/>
+    <img class="smallCorner pad" src="images/C4D/render-august-2.png"/>
 </div>
 <!---------------------watchOS 10------------------>
 
