--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ flex-direction: row;
 </div>
 <div class="sidesImages hidden">
     <img class="smallCorner pad" src="images/C4D/render-august-1.png"/>
-    <img class="smallCorner pad" src="images/C4D/render-august-2.png"/>
+    <img class="smallCorner pad" src="images/C4D/render-august-3.JPG"/>
 </div>
 <!---------------------watchOS 10------------------>
 
