--- a/index.html
+++ b/index.html
@@ -54,26 +54,40 @@
     </section>
   <!------END OF NAVIGATION------->
 
+  <section id="hero">
+<img class="app1" src="images/hero-app-1.png" />
+<h2 class="newFilipName">Filip Vabroušek</h2>
+<h4 class="newSubtitle">Developer and motion designer</h4>
+<img class="app2" src="images/hero-app-2.png" />
+<img class="app3" src="images/hero-app-3.png" />
+  </section>
 
   <!------INTRO SECTION------->
-<section class="floatingSectionWrapper">
+<section style="display:none" class="floatingSectionWrapper">
+ 
+ 
+ 
   <section class="floatingSection" id="main">
 
     <img class="square prlx" value="6" style="display: none"
       src="https://www.azocleantech.com/images/Article_Images/ImageForArticle_227_15820269818147731.png" />
 
     <div class="floatContent prlx" value="3">
-      <h2 class="sm-a prlx" value="5">My name is</h2>
-      <h2 class="filipName prlx" value="6">Filip</h2>
+    <!---  <h2 class="sm-a prlx" value="5">My name is</h2>-->
+      <h2 class="filipName prlx" value="6">Filip Vabrousek</h2>
+     
     </div>
+   
   </section>
 
+
   <div class="floatDescription">
-    <!---<img class="dots prlx" value="4" src="images/dots.png" />--->
+    <img class="dots prlx" value="4" src="images/appa.png" />
     <p class="prlx myDescription" style="display: none" value="7">Developer and motion designer from the Czech Republic</p>
   </div>
 
   <div class="prlx smp" value="3"></div>
+  
 </section>
   <!------INTRO SECTION------->
 
@@ -110,7 +124,7 @@
       <p class="noScale">I</p>
       <p class="noScale">am</p>
       <p class="noScale">a</p>
-      <p class="noScale">22</p>
+      <p class="noScale">23</p>
       <p class="noScale">year</p>
       <p class="noScale">old</p>
       <p class="noScale">developer</p>
@@ -273,7 +287,7 @@ flex-direction: row;
 
 
 
-<section id="designTop336" class="modernSection">
+<section class="modernSection">
 
 
 <!------------------RELAYS----------------->
