--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Filip Vabrousek - Work</title>
     <meta name="referrer" content="no-referrer" />
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style/sportStyle.css"/>
     <link rel="stylesheet" href="style/common.css">
     <link rel="stylesheet" href="style/index-style.css">
+    <link rel="stylesheet" href="style/transition.css">
     <!--<link rel="stylesheet" href="style/about-style.css">-->
     <link rel="stylesheet" href="style/anim.css">
     <link href="https://fonts.googleapis.com/css?family=Anaheim&display=swap" rel="stylesheet">
@@ -34,7 +36,16 @@
 <body>
 
 
+  <script>
+    // alert("JOJ")
 
+if (window.localStorage.getItem("reld") === false){
+  window.location.reload(); // 163426
+}
+
+window.localStorage.setItem("reld", "true");
+       
+    </script>
 
   <div id="onTopFloat">
   <section id="firstPage">
@@ -47,7 +58,7 @@
 
             <div id="left">
                 <button class="btn-nav" id="close">×</button>
-                <a class="btn-nav whiteNav" href="index.html">Work</a>
+                <a class="btn-nav whiteNav" href="https://filipvabrousek.github.io/">Work</a>
 				        <a class="btn-nav whiteNav" href="sport.html">Sport</a>
             </div>
         </div>
@@ -431,8 +442,7 @@ flex-direction: row;
  <img class="adobeIcon hidden" src="images/c4d-icon.png"/>
 </div>
 <div class="sidesImages hidden">
-    <img class="smallCorner pad" src="images/C4D/render-august-1.png"/>
-    <img class="smallCorner pad" src="images/C4D/render-august-3.JPG"/>
+    <img class="smallCorner pad" src="images/C4D/iPhone-15-Pro-January-2023.jpg"/>
 </div>
 <!---------------------watchOS 10------------------>
 
@@ -954,6 +964,9 @@ Before it hits the small breakpoint make it to column layout.
 <script src="js/animation.js"></script>
 <script src="js/site-animation.js"></script>
 
+<script src="js/utils.js"></script>
+
+<script src="js/transition.js"></script>
 
 <script src="js/footer.js"></script>
 
