--- a/sport.html
+++ b/sport.html
@@ -297,6 +297,12 @@ if (document.startViewTransition){
             font-size: 7rem !important;
         }
 
+        @media only screen and (max-width: 600px) {
+            .about {
+            font-size: 5rem !important;
+        }
+        }
+
      
 
     </style>
