--- a/sport.html
+++ b/sport.html
@@ -174,7 +174,7 @@ if (document.startViewTransition){
         </div>
     
 	  
-	 <ul class="pad fade">
+	 <ul class="pad fade sportUl">
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2018 (Juniors)</li>
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2019 (Men)</li>
 	 <li><b>2nd</b> place Czech Republic 10000m Championships 2018 (Juniors) </li>
