--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@ Before it hits the small breakpoint make it to column layout.
 
 <script src="js/utils.js"></script>
 <script src="js/filip-name-animation.js"></script>
-<script src="js/transition.js"></script>
+<!--<script src="js/transition.js"></script>--->
 <script src="js/appHover.js"></script>
 <script src="js/blobOnScroll.js"></script>
 <script src="js/footer.js"></script>
