--- a/sport.html
+++ b/sport.html
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="style/common.css">  
      <link rel="stylesheet" href="style/about-style.css">  
      <link rel="stylesheet" href="style/anim.css">
-     <link rel="stylesheet" href="style/transition.css">
+   <!---  <link rel="stylesheet" href="style/transition.css">--->
      <link rel="stylesheet" href="style/navStyle.css">
 <!---<link rel="stylesheet" href="dark.css">-->
     <link href="https://fonts.googleapis.com/css?family=Anaheim&display=swap" rel="stylesheet">
