--- a/sport.html
+++ b/sport.html
@@ -6,6 +6,7 @@
 <head>
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <meta name="referrer" content="no-referrer" />
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/sportStyle.css"/>
@@ -55,7 +56,8 @@ if (document.startViewTransition){
 
    <a class="navControl" href="index.html">←</a>
    <!-- <button class="navControl" id="h">☰</button>-->
-    <button class="navControl" id="l">←</button>
+   
+   <button class="navControl" id="l">←</button>
   </div>
     
   
