--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 
 <head>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>Filip Vabrousek - Work</title>
     <meta name="referrer" content="no-referrer" />
     <meta charset="UTF-8">
