--- a/sport.html
+++ b/sport.html
@@ -54,6 +54,13 @@ if (document.startViewTransition){
 
     <div id="onTopLeft">
 
+        
+<button id="mtest">tester</button>
+
+        <script>
+
+document.querySelector("#mtest").addEventListener("click", () => window.open("https://www.filipvabrousek.com", "_self"));
+        </script>
    <a class="navControl" href="index.html">←</a>
    <!-- <button class="navControl" id="h">☰</button>-->
    
