--- a/sport.html
+++ b/sport.html
@@ -59,7 +59,7 @@ if (document.startViewTransition){
 
         <script>
 
-document.querySelector("#mtest").addEventListener("click", () => window.open("https://www.filipvabrousek.com", "_self"));
+document.querySelector("#mtest").addEventListener("click", () => window.open("https://www.filipvabrousek.github.io", "_self"));
         </script>
    <a class="navControl" href="index.html">←</a>
    <!-- <button class="navControl" id="h">☰</button>-->
