--- a/sport.html
+++ b/sport.html
@@ -58,8 +58,8 @@ if (document.startViewTransition){
 <button id="mtest">tester</button>
 
         <script>
-
-document.querySelector("#mtest").addEventListener("click", () => window.open("https://www.filipvabrousek.github.io", "_self"));
+// https://filipvabrousek.github.io/
+document.querySelector("#mtest").addEventListener("click", () => window.open("https://filipvabrousek.github.io", "_self"));
         </script>
    <a class="navControl" href="index.html">←</a>
    <!-- <button class="navControl" id="h">☰</button>-->
