--- a/sport.html
+++ b/sport.html
@@ -370,7 +370,7 @@ document.querySelector("#mtest").addEventListener("click", () => window.open("ht
 <script src="js/footer.js"></script>
 
 <script src="js/utils.js"></script>
-<script src="js/transition.js"></script>
+<!--<script src="js/transition.js"></script>--->
 
 
 <link rel="stylesheet" href="style/images.css">
