--- a/sport.html
+++ b/sport.html
@@ -55,11 +55,11 @@ if (document.startViewTransition){
     <div id="onTopLeft">
 
         
-<button id="mtest">tester</button>
+
 
         <script>
 // https://filipvabrousek.github.io/
-document.querySelector("#mtest").addEventListener("click", () => window.open("https://filipvabrousek.github.io", "_self"));
+// document.querySelector("#mtest").addEventListener("click", () => window.open("https://filipvabrousek.github.io", "_self"));
         </script>
    <a class="navControl" href="index.html">←</a>
    <!-- <button class="navControl" id="h">☰</button>-->
