--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style/common.css">
     <link rel="stylesheet" href="style/index-style.css">
     <link rel="stylesheet" href="style/navStyle.css">
-    <link rel="stylesheet" href="style/transition.css">
+    <!--<link rel="stylesheet" href="style/transition.css">--->
     <!--<link rel="stylesheet" href="style/about-style.css">-->
     <link rel="stylesheet" href="style/anim.css">
     <link href="https://fonts.googleapis.com/css?family=Anaheim&display=swap" rel="stylesheet">
@@ -371,6 +371,7 @@ window.localStorage.setItem("reld", "true");
 
 #motion1, #motion2 {
   transform: rotate3d(1, 0, 0, -90deg);
+  margin-top: -0.2rem;
 }
 
 
