--- a/tutorials/21-06-23-vision-OS-tutorial.html
+++ b/tutorials/21-06-23-vision-OS-tutorial.html
@@ -77,7 +77,7 @@
 
          <p class="pad">
             We will create new project in Xcode and select select visionOS.
-            In our example we will choose initial scene: Window and immersive space: none.
+            In our example we will choose initial scene: Window and immersive space: .full.
             We then click "Create".
 	</p>
 
