--- a/tutorials/21-06-23-vision-OS-tutorial.html
+++ b/tutorials/21-06-23-vision-OS-tutorial.html
@@ -85,7 +85,7 @@
     <h2> Understanding the code</h2>
 
     <p class="pad">
-We will opent the app.swift file.
+We will open the app.swift file.
 We can see WindowGroup View, that includes the initial view of our app.
 </p>
 
@@ -98,9 +98,6 @@ We can see WindowGroup View, that includes the initial view of our app.
 </p>
 
 
-<p class="pad">
-    We will use .windowStyle(.volumetric) to make a volume.
-</p>
 
     <pre>
 <code class="language-swift">
@@ -202,7 +199,8 @@ We can see WindowGroup View, that includes the initial view of our app.
 
         Immersive space is space that can completely sourround the user.
         
-        We will add immersive space right below the WindowGroup structure in the xx.swift file and use the id: "MySpace"
+        We will add ImmersiveView() to our Immersive space.
+        We are going to create this View later.
         
     </p>
 	
@@ -229,7 +227,7 @@ We can see WindowGroup View, that includes the initial view of our app.
 
 <p class="pad">
 
-We do not need the update blocks as the content we want to display is static. We load our etit, but this time it will be shown in Immerisve View
+We do not need the update blocks as the content we want to display is static. We load our entity, but this time it will be shown in Immerisve View
 
     </p>
 
