--- a/tutorials/21-06-23-vision-OS-tutorial.html
+++ b/tutorials/21-06-23-vision-OS-tutorial.html
@@ -91,7 +91,7 @@ We can see WindowGroup View, that includes the initial view of our app.
 
 
 <p class="pad">
-    SwiftUI supports 3 types of windows:
+    SwiftUI supports 3 types of windows:<br>
     windows - classical windows that can have elements with slight elevation<br>
     volume - 3D experience<br>
     full space - space around you<br>
@@ -139,13 +139,6 @@ We can see WindowGroup View, that includes the initial view of our app.
         We get our content from ```content.entities.first``` and set transform to it.
         We add tap gesture to our scene. In TapGesure, the scene will get bigger to to make the scene larger.
         Finally we use the ```glassBackgroundEffect``` modifier to add beautiful glass background to our scene.
-       
-<br><br>
-        SwiftUI now supports several types of keyframes:<br>
-        Linear keyframe - which uses linear interpolation between states.<br>
-        Cubic keyframe - the initial velocity of the next segment is used as the end velocity of the
-        Cubic Keyframe segment defined by this keyframe<br>
-        Spring keyframe - Keyframe uses .spring (bouncing) function<br>
         </p>
 	
 <pre>
@@ -284,7 +277,7 @@ User can open the immersive space by tapping this button and he will be complete
 </code>
 </pre>
  
- <p class="pad"> That's it folks, thanks for reading and enjoy the rest of WWDC23!</p>
+ <p class="pad"> That's it folks, enjoy developing for VisionOS!</p>
     
 
 <style>
