--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ alert("K")
 
         <div class="leftAppWrapper">
           <h2 class="stroked evenyStroked">Eveny</h2>
-          <p class="appDesc">Stay organised with odd/even week scheduling. Text size matters
+          <p class="appDesc">Stay organised with odd/even week scheduling.
           </p>
 
 
@@ -789,7 +789,7 @@ alert("K")
   <div class="leftAppWrapper">
 
     <h2 class="stroked swimrunnyStroked">Swimrun World</h2>
-    <p class="appDesc">Run effectively with effective pace and cadence measuring.
+    <p class="appDesc">Find a swimrun partner
     </p>
 
     <div class="stores">
