--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ alert("K")
 <!------------------/RUNNY---------184853 React-------->
 
 
-
+<!----
 <h2 class="largeHidden" id="swimrunnyLarge">Swimrun World</h2>
 <div class="oneMoreOverlay">
 
@@ -811,7 +811,46 @@ alert("K")
 
 
 </div>
+--->
 
+
+<h2 class="largeHidden" id="swimrunnyLarge">Swimrun World</h2>
+
+<div class="oneMoreOverlay">
+
+
+  <div class="blobImage blobImageSwimrunny"></div>
+
+<div id="swimrunnyOverlay">
+
+<div id="swimrunnysa" class="leftIcon leftIconSwimrunny">
+  <div class="sidesImages">
+    <img src="images/sr-orig.png" class="app-img" />
+  </div>
+
+  <div class="leftAppWrapper">
+
+    <h2 class="stroked swimrunnyStroked">Swimrun World</h2>
+    <p class="appDesc">Run effectively with effective pace and cadence measuring.
+    </p>
+
+    <div class="stores">
+      <a class="" href="https://apps.apple.com/us/app/runny/id1460395908">
+        <img class="appstore" src="images/download.png" /></a>
+
+     
+    </div>
+  </div>
+</div>
+</div>
+
+
+<div class="stores lstores">
+  <a class="" href="https://apps.apple.com/cz/app/swimrun-world/id144547569">
+    <img class="appstore" src="images/download.png" /></a>
+</div>
+
+</div>
 
 
 <!------------------/SWIMRUN WORLD----------------
