--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@ alert("K")
         <div class="leftAppWrapper">
           <h2 class="stroked evenyStroked">Eveny</h2>
           <p class="appDesc">Stay organised with odd/even week scheduling.
+            <a href="https://apps.apple.com/story/id1531962992">Featured by Apple</a> on the mac App Store
           </p>
 
 
