--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ alert("K")
         <div class="leftAppWrapper">
           <h2 class="stroked evenyStroked">Eveny</h2>
           <p class="appDesc">Stay organised with odd/even week scheduling.
-            <a href="https://apps.apple.com/story/id1531962992">Featured by Apple</a> on the mac App Store
+            <a href="https://apps.apple.com/story/id1531962992">Featured by Apple</a> on the Mac App Store
           </p>
 
 
@@ -740,7 +740,7 @@ alert("K")
   <div class="leftAppWrapper">
 
     <h2 class="stroked swimrunnyStroked">Swimrun World</h2>
-    <p class="appDesc">Run effectively with effective pace and cadence measuring.
+    <p class="appDesc">Find a swimrun partner
     </p>
 
     <div class="stores">
