--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ alert("K")
 
 <h2 class="largeHidden" id="runnyLarge">Runny</h2>
 
-<div class="oneMoreOverlay">
+<div class="oneMoreOverlay modernSection">
 
 
   <div class="blobImage blobImageRunny"></div>
@@ -661,8 +661,6 @@ alert("K")
     <div class="stores">
       <a class="" href="https://apps.apple.com/us/app/runny/id1460395908">
         <img class="appstore" src="images/download.png" /></a>
-
-     
     </div>
   </div>
 </div>
@@ -673,9 +671,6 @@ alert("K")
   <a class="hidden" href="https://apps.apple.com/us/app/runny/id1460395908">
     <img class="appstore hidden" src="images/download.png" /></a>
 </div>
-
-
-
 
 </div>
 <!------------------/RUNNY---------184853 React-------->
@@ -725,7 +720,7 @@ alert("K")
 
 <h2 class="largeHidden" id="swimrunnyLarge">Swimrun World</h2>
 
-<div class="oneMoreOverlay">
+<div class="oneMoreOverlay modernSection">
 
 
   <div class="blobImage blobImageSwimrunny"></div>
@@ -740,7 +735,9 @@ alert("K")
   <div class="leftAppWrapper">
 
     <h2 class="stroked swimrunnyStroked">Swimrun World</h2>
-    <p class="appDesc">Find a swimrun partner
+    <p class="appDesc">Find a swimrun partner for any swimrun
+
+      <!--18/08 1949-->
     </p>
 
     <div class="stores">
