--- a/spatial-network-terms.html
+++ b/spatial-network-terms.html
@@ -56,6 +56,12 @@
     <!----july 2016 iOS apps---->
     
 	<p class="pad fade hidden bottomZero appTitle">Spatial Network</p>
+<!---
+    <if you have any 
+
+    --->
+
+    <p class="pad fade hidden bottomZero">If you have any question about the app please wrize an e-mail to: filipvabrousek1@gmail.com</p>
 
     <p class="pad fade hidden bottomZero">EULA</p>
     
