--- a/tutorials/11-06-24-text-renderer-tutorial.html
+++ b/tutorials/11-06-24-text-renderer-tutorial.html
@@ -81,7 +81,7 @@
 
 <!---------------------------------------------------- ISOMETRIC LOGO ---------------------------------------------------->
 <section id="tut-section">
-    <p class="pad">In this tutorial we are going to create gradual blur effect using the new <code>textEffect</code> modifier in iOS 18. </p>
+    <p class="pad">In this tutorial we are going to create gradual blur effect using the new <code>textRenderer</code> modifier in iOS 18. </p>
 
     <h2>Step 1: Define the Text Layout</h2>
 <p class="pad">First, we need to define the text layout. We do this by extending the <code>Text.Layout</code> structure and adding two computed properties: <code>flattenedRuns</code> and <code>flattenedRunSlices</code>. These properties will allow us to access the individual runs and slices of the text layout.</p>
