--- a/index.html
+++ b/index.html
@@ -1211,11 +1211,11 @@ window.addEventListener('wheel', (event) => {
   <p class="footer-em"></p>
 
   <div id="social">
-      <img id="fba" src="tutorials/footer/fb.png">
-      <img src="tutorials/footer/spacer.png">
-      <img id="insta" src="tutorials/footer/insta.png">
-      <img src="tutorials/footer/spacer.png">
-      <img id="x" src="tutorials/footer/x.png">
+      <img id="fba" src="images/footer/fb.png">
+      <img src="images/footer/spacer.png">
+      <img id="insta" src="images/footer/insta.png">
+      <img src="images/footer/spacer.png">
+      <img id="x" src="images/footer/x.png">
   </div>
 
   
