--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     
+  
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +64,10 @@
 </head>
 
 <body>
-
+<style>
+ /* body {-webkit-text-size-adjust: none;  }*/
+ /* Website is just smaller in Safari*/
+</style>
 
   <script>
     // alert("JOJ")
