--- a/sport.html
+++ b/sport.html
@@ -147,13 +147,13 @@ if (document.startViewTransition){
 
         <div class="pb">
             <p class="dist">3K</p>
-            <p class="time">8:55</p>
+            <p class="time">8:49</p>
           </div>
 
 
 		<div class="pb">
 		  <p class="dist">5K</p>
-		  <p class="time">15:26</p>
+		  <p class="time">15:14</p>
 		</div>
 
 		<div class="pb">
@@ -163,7 +163,7 @@ if (document.startViewTransition){
 
 		<div class="pb">
 		  <p class="dist">21.1K</p>
-		  <p class="time">1:12:32</p>
+		  <p class="time">1:09:25</p>
 		</div>
 
         
@@ -186,6 +186,8 @@ if (document.startViewTransition){
     
 	  
 	 <ul class="pad fade sportUl">
+     <li><b>1st</b> place Moravian-Silesian Championships Half marathon 2024 (Men)</li>
+     <li><b>1st</b> place Moravian-Silesian Championships 5000m 2024 (Men)</li>
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2018 (Juniors)</li>
 	 <li><b>1st</b> place Moravian-Silesian Championships 5000m 2019 (Men)</li>
 	 <li><b>2nd</b> place Czech Republic 10000m Championships 2018 (Juniors) </li>
