--- a/deletion.html
+++ b/deletion.html
@@ -47,9 +47,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Account Deletion Request</h1>
+    <h1>We are sorry to see you go.</h1>
     <p>If you would like to delete your account in Relays: Find a relay partner app, please send an email to:</p>
     <p><a href="mailto:relaysapp@gmail.com">relaysapp@gmail.com</a></p>
+    <p>All data will be permanently deleted. There is no retention period.</p>
   </div>
 </body>
 </html>
